--- a/ROC.ipynb
+++ b/ROC.ipynb
@@ -8,10 +8,9 @@
     "1. Calculates [fpr, tpr, thresholds, auc] and matches the list to its key value (trial set #) in the dictionary named PRI (meaning 'Positive Rate Information').\n",
     "2. Shows the ROC plot of each trial sets.\n",
     "\n",
-    "The input data should be in a 3-D numpy ndarray :(# of trials sets, # of training set, 2)\n",
+    "The input data should be in a 3-D numpy ndarray :  (# of trials sets, # of training set, 2)\n"
+    "\n"
     "eg) data.shape = (5, 300, 2) would mean 5 different trial sets, 300 is for the number of training sets in each trial, and 2 is for y value, and predicted value in the right order.\n",
-    "\n",
-    "\n",
     "\n",
     "\n"
    ]
